# agentsim-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  railway.toml
.railway/: deploy-marker
agentsim_mcp/: __init__.py  server.py
npm/: package.json
tests/: test_server.py
