[project]
name = "agentsim-mcp"
version = "0.17.0"
description = "AgentSIM MCP server — OTP session tools for AI coding assistants"
readme = {text = "<!-- mcp-name: dev.agentsim/mcp -->\n\nOTP sessions and delivery diagnostics for browser agents. Provision a programmable US number, wait for SMS, inspect raw messages, release. Target-service support is empirical.\n\nSee [agentsim.dev](https://agentsim.dev) for documentation.", content-type = "text/markdown"}
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "agents", "otp", "sms", "ai", "claude", "cursor"]
authors = [
  { name = "AgentSIM", email = "hello@agentsim.dev" },
]
dependencies = [
  "fastmcp>=0.4",
  "httpx>=0.27",
  "pydantic>=2.0",
  "uvicorn>=0.29",
]

[project.urls]
Homepage = "https://agentsim.dev"
Repository = "https://github.com/agentsimdev/agentsim"
Documentation = "https://docs.agentsim.dev"
Changelog = "https://github.com/agentsimdev/agentsim/blob/main/CHANGELOG.md"

[project.scripts]
agentsim-mcp = "agentsim_mcp.server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentsim_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

